--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -34,6 +34,7 @@ security:
          - { path: ^/admin, roles: ROLE_ADMIN }
          - { path: ^/profile, roles: ROLE_USER }
          - { path: ^/order, roles: ROLE_USER }
+         - { path: ^/manager, roles: ROLE_MANAGER }
 
 when@test:
     security:
